# Stable_Diffusion

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md
model_package/: MANIFEST.in  pyproject.toml  setup.py  tox.ini
model_package/model/: __init__.py  predict.py
model_package/model/config/: base_config.yml
model_package/model/model/: clip.py  unet_diffusion.py  vae.py
model_package/model/sd_model/: sampler.py
model_package/model/util/: load_config.py
model_package/requirements/: requirements.txt  test_requirements.txt  typing_requirements.txt
model_package/sd_model/: __init__.py  predict.py
model_package/sd_model/config/: base_config.yaml  base_config.yml  test_config.yaml
model_package/sd_model/model/: clip.py  sampler.py  unet_diffusion.py  vae.py
model_package/sd_model/util/: load_config.py
model_package/tests/: conftest.py  test_adversarial.py  test_clip_score.py  test_gan_metrics.py  test_general_prediction.py  test_performance.py  test_prediction.py  test_seed_diversity.py  test_similarity_ssim.py
serving_api/: requirements.txt  tox.ini
serving_api/app/: __init__.py  api.py  config.py  main.py
serving_api/app/schemas/: __init__.py  generate.py
serving_api/app/tests/: conftest.py  test_api.py  test_load.py  test_security.py
serving_api/app/tests/config/: test_config.yaml
serving_api/requirements/: requirements.txt  test_requirements.txt
